# rdu

./: .prettierignore  .prettierrc  Cargo.toml  LICENSE  README.md  clippy.toml
.github/workflows/: cicd.yml  release.yml
scripts/: pre-push-check.ps1
src/: app.rs  args.rs  colors.rs  file_node.rs  lib.rs  main.rs  scanner.rs  sort.rs  ui.rs  utils.rs
