[package]
name = "rdu"
version = "1.0.5"
authors = ["Joan Lara Ganau"]
repository = "https://github.com/ShinuToki/rdu"
readme = "README.md"
description = "Rust-based disk usage analyzer"
license = "MIT"
edition = "2024"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1

[lints.clippy]
panic = "deny"
unwrap_used = "deny"
expect_used = "deny"
indexing_slicing = "deny"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
crossterm = "0.29.0"
jwalk = "0.8.1"
number_prefix = "0.4.0"
ratatui = "0.30.0"
